cmake_minimum_required(VERSION 2.9)
project(rawview)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
include_directories(${GTK2_INCLUDE_DIRS})
link_directories(${GTK2_LIBRARY_DIRS})
add_executable(rawview main.c rawfile.c graphics.c)
target_link_libraries(rawview ${GTK2_LIBRARIES})
